cmake_minimum_required(VERSION 3.0)
project(Introduction_To_C___Exercise)

set(CMAKE_CXX_STANDARD 14)


#add_executable(9-2 Chapter_9_Objects_and_Classes/9-2.cpp Chapter_9_Objects_and_Classes/Fan.cpp)
#add_executable(9-3 Chapter_9_Objects_and_Classes/9-3.cpp Chapter_9_Objects_and_Classes/Account.cpp)
#add_executable(MyPoint Chapter_9_Objects_and_Classes/MyPoint.cpp)
#add_executable(9-4 Chapter_9_Objects_and_Classes/9-4.cpp Chapter_9_Objects_and_Classes/MyPoint.cpp)
#add_executable(Time Chapter_9_Objects_and_Classes/Time.cpp)
#add_executable(9-5 Chapter_9_Objects_and_Classes/9-5.cpp Chapter_9_Objects_and_Classes/Time.cpp)
#add_executable(QuadraticEquation Chapter_9_Objects_and_Classes/QuadraticEquation.cpp
#        Chapter_9_Objects_and_Classes/9-6.cpp)
#add_executable(EvenNumber Chapter_9_Objects_and_Classes/EvenNumber.cpp
#        Chapter_9_Objects_and_Classes/9-11.cpp)
#add_executable(LinearEquation Chapter_9_Objects_and_Classes/LinearEquation.cpp
#        Chapter_9_Objects_and_Classes/9-9.cpp)
#add_executable(9-10 Chapter_9_Objects_and_Classes/LinearEquation.cpp Chapter_9_Objects_and_Classes/9-10.cpp)
#add_executable(Data Chapter_9_Objects_and_Classes/Data.cpp Chapter_9_Objects_and_Classes/9-8.cpp)
#add_executable(StopWatch Chapter_9_Objects_and_Classes/StopWatch.cpp)
#add_executable(9-7 Chapter_9_Objects_and_Classes/9-7.cpp Chapter_9_Objects_and_Classes/StopWatch.cpp)
add_executable(10-1 Chapter_10_Object_Thinking/10-1.cpp)
add_executable(10-2 Chapter_10_Object_Thinking/10-2.cpp)
add_executable(10-3 Chapter_10_Object_Thinking/10-3.cpp)
add_executable(10-4 Chapter_10_Object_Thinking/10-4.cpp)
add_executable(10-5 Chapter_10_Object_Thinking/10-5.cpp)
add_executable(10-6 Chapter_10_Object_Thinking/10-6.cpp)
add_executable(10-7 Chapter_10_Object_Thinking/10-7.cpp)
add_executable(10-8 Chapter_10_Object_Thinking/10-8.cpp)