cmake_minimum_required(VERSION 3.0)
project(Introduction_To_C___Exercise)

set(CMAKE_CXX_STANDARD 17)


#add_executable(9-2 Chapter_9_Objects_and_Classes/9-2.cpp Chapter_9_Objects_and_Classes/Fan.cpp)
#add_executable(9-3 Chapter_9_Objects_and_Classes/9-3.cpp Chapter_9_Objects_and_Classes/Account.cpp)
#add_executable(MyPoint Chapter_9_Objects_and_Classes/MyPoint.cpp)
#add_executable(9-4 Chapter_9_Objects_and_Classes/9-4.cpp Chapter_9_Objects_and_Classes/MyPoint.cpp)
#add_executable(Time Chapter_9_Objects_and_Classes/Time.cpp)
#add_executable(9-5 Chapter_9_Objects_and_Classes/9-5.cpp Chapter_9_Objects_and_Classes/Time.cpp)
#add_executable(QuadraticEquation Chapter_9_Objects_and_Classes/QuadraticEquation.cpp
#        Chapter_9_Objects_and_Classes/9-6.cpp)
#add_executable(EvenNumber Chapter_9_Objects_and_Classes/EvenNumber.cpp
#        Chapter_9_Objects_and_Classes/9-11.cpp)
#add_executable(LinearEquation Chapter_9_Objects_and_Classes/LinearEquation.cpp
#        Chapter_9_Objects_and_Classes/9-9.cpp)
#add_executable(9-10 Chapter_9_Objects_and_Classes/LinearEquation.cpp Chapter_9_Objects_and_Classes/9-10.cpp)
#add_executable(Data Chapter_9_Objects_and_Classes/Data.cpp Chapter_9_Objects_and_Classes/9-8.cpp)
#add_executable(StopWatch Chapter_9_Objects_and_Classes/StopWatch.cpp)
#add_executable(9-7 Chapter_9_Objects_and_Classes/9-7.cpp Chapter_9_Objects_and_Classes/StopWatch.cpp)
#add_executable(10-1 Chapter_10_Object_Thinking/10-1.cpp)
#add_executable(10-2 Chapter_10_Object_Thinking/10-2.cpp)
#add_executable(10-3 Chapter_10_Object_Thinking/10-3.cpp)
#add_executable(10-4 Chapter_10_Object_Thinking/10-4.cpp)
#add_executable(10-5 Chapter_10_Object_Thinking/10-5.cpp)
#add_executable(10-6 Chapter_10_Object_Thinking/10-6.cpp)
#add_executable(10-7 Chapter_10_Object_Thinking/10-7.cpp)
#add_executable(10-8 Chapter_10_Object_Thinking/10-8.cpp)
#add_executable(10-9 Chapter_10_Object_Thinking/10-9.cpp)
#add_executable(Location Chapter_10_Object_Thinking/Location.cpp)
#add_executable(10-17 Chapter_10_Object_Thinking/Location.cpp Chapter_10_Object_Thinking/10-17.cpp)
#add_executable(StackOfIntegers Chapter_10_Object_Thinking/StackOfIntegers.cpp)
#add_executable(10-16 Chapter_10_Object_Thinking/StackOfIntegers.cpp Chapter_10_Object_Thinking/10-16.cpp)
#add_executable(10-15 Chapter_10_Object_Thinking/10-15.cpp)
#add_executable(10-14 Chapter_10_Object_Thinking/10-14.cpp Chapter_10_Object_Thinking/StackOfIntegers.cpp)
#add_executable(Geometry Chapter_10_Object_Thinking/Geometry.cpp)
#add_executable(10-13 Chapter_10_Object_Thinking/10-13.cpp Chapter_10_Object_Thinking/Geometry.cpp)
#add_executable(Stock Chapter_10_Object_Thinking/Stock.cpp)
#add_executable(10-12 Chapter_10_Object_Thinking/10-12.cpp Chapter_10_Object_Thinking/Stock.cpp)
#add_executable(Loan Chapter_10_Object_Thinking/Loan.cpp Chapter_10_Object_Thinking/10-11.cpp)
#add_executable(MyInteger Chapter_10_Object_Thinking/MyInteger.cpp Chapter_10_Object_Thinking/10-10.cpp)
#add_executable(10-10 Chapter_10_Object_Thinking/10-10.cpp Chapter_10_Object_Thinking/MyInteger.cpp)
#add_executable(11-1 Chapter_11_Pointers/11-1.cpp)
#add_executable(11-2 Chapter_11_Pointers/11-2.cpp)
#add_executable(11-3 Chapter_11_Pointers/11-3.cpp)
#add_executable(11-4 Chapter_11_Pointers/11-4.cpp)
#add_executable(11-5 Chapter_11_Pointers/11-5.cpp)
#
#set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -fexec-charset=GBK")
#add_executable(11-6 Chapter_11_Pointers/11-6.cpp)
#add_executable(11-7 Chapter_11_Pointers/11-7.cpp Chapter_9_Objects_and_Classes/Account.cpp)
#add_executable(11-8 Chapter_11_Pointers/11-8.cpp Chapter_11_Pointers/Circle2D.cpp)
#add_executable(Circle2D Chapter_11_Pointers/Circle2D.cpp)
#add_executable(Rectangle2D Chapter_11_Pointers/Rectangle2D.cpp)
#add_executable(11-16 Chapter_11_Pointers/11-16.cpp)
#add_executable(MyString Chapter_11_Pointers/MyString.cpp Chapter_11_Pointers/11-15.cpp)
#add_executable(11-15 Chapter_11_Pointers/11-15.cpp Chapter_11_Pointers/MyString.cpp)
#add_executable(11-10 Chapter_11_Pointers/11-10.cpp)
#add_executable(11-11 Chapter_11_Pointers/11-11.cpp Chapter_11_Pointers/Rectangle2D.cpp)

#add_executable(MyDate Chapter_11_Pointers/MyDate.cpp Chapter_11_Pointers/11-12.cpp)
#add_executable(11-12 Chapter_11_Pointers/11-12.cpp MyDate Chapter_11_Pointers/MyDate.cpp)
add_executable(Course Chapter_11_Pointers/Course.cpp)
add_executable(test Chapter_12_Templates/12-1.cpp)
add_executable(12-2 Chapter_12_Templates/12-2.cpp)
add_executable(17-1 Chapter_17_Recursion/17-1.cpp)